--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,42 @@
-amqp==2.5.2
-appdirs==1.4.4
-asgiref==3.3.4
-astroid==2.8.3
-Babel==2.8.0
-beautifulsoup4==4.10.0
-billiard==3.6.1.0
-botocore==1.13.45
-celery==4.4.0
-certifi==2019.11.28
-chardet==3.0.4
-click==8.0.1
-defusedxml==0.6.0
-distlib==0.3.1
-Django==2.2.16
-django-cors-headers==3.7.0
-django-crequest==2016.3.16
-django-timezone-field==4.0
-djangorestframework==3.12.4
-djangorestframework-simplejwt==4.6.0
-docopt==0.6.2
-docutils==0.15.2
-dropbox==9.4.0
-et-xmlfile==1.0.1
-filelock==3.0.12
-Flask==2.0.1
-FormEncode==1.3.1
-google==3.0.0
-idna==2.8
-install==1.3.4
-isort==5.9.3
-itsdangerous==2.0.1
-jdcal==1.4.1
-Jinja2==3.0.1
-jmespath==0.9.4
-kombu==4.6.7
-lazy-object-proxy==1.6.0
-linecache2==1.0.0
-lxml==4.9.2
-MarkupSafe==2.0.1
-mccabe==0.6.1
-numpy==1.22.2
-oauthlib==3.1.0
-openpyxl==3.1.2
-pandas==1.4.1
-pbr==5.5.1
-Pillow==6.2.1
-pipenv==2021.5.29
-platformdirs==2.4.0
-protobuf==3.19.4
-psutil==5.8.0
-psycopg2-binary==2.8.6
-py==1.8.1
-PyJWT==2.1.0
-pylint==2.11.1
-pymongo==3.10.0
-python-crontab==2.4.0
-python-dateutil==2.8.1
-python-decouple==3.4
-python3-openid==3.1.0
-pytz==2021.3
-redis==3.5.3
-requests==2.22.0
-requests-oauthlib==1.3.0
-s3transfer==0.2.1
-selenium==3.141.0
-six==1.13.0
-soupsieve==2.3.1
-sqlparse==0.3.0
-stevedore==3.3.0
-toml==0.10.2
-traceback2==1.4.0
-typing-extensions==3.10.0.2
-unicodecsv==0.14.1
-unittest2==1.1.0
-urllib3==1.25.7
-vine==1.3.0
-virtualenv==20.4.3
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-Werkzeug==2.0.1
-wrapt==1.13.2
-xlrd==1.2.0
-xlwt==1.3.0
+alembic==1.11.1
+anyio==3.6.2
+bcrypt==4.0.1
+certifi==2023.5.7
+cffi==1.15.1
+click==8.1.3
+cryptography==41.0.1
+dnspython==2.3.0
+ecdsa==0.18.0
+email-validator==2.0.0.post2
+fastapi==0.95.2
+greenlet==2.0.2
+h11==0.14.0
+httpcore==0.17.0
+httptools==0.5.0
+httpx==0.24.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.2
+orjson==3.8.12
+passlib==1.7.4
+psycopg2==2.9.6
+pyasn1==0.5.0
+pycparser==2.21
+pydantic==1.10.7
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+PyYAML==6.0
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.15
+starlette==0.27.0
+typing_extensions==4.5.0
+ujson==5.7.0
+uvicorn==0.22.0
+uvloop==0.17.0
+watchfiles==0.19.0
+websockets==11.0.3
