--- a/fastapi.service
+++ b/fastapi.service
@@ -5,10 +5,10 @@ After=network.target
 [Service]
 User=ubuntu
 Group=ubuntu
-WorkingDirectory=/path/to/your/app
-Environment="PATH=/path/to/venv/bin"
-EnvironmentFile=/path/to/your/app/.env
-ExecStart=/path/to/your/virtualenv/bin/gunicorn -c /path/to/gunicorn.conf.py your_application:app
+WorkingDirectory=/home/ubuntu/fastapi
+Environment=/home/ubuntu/fastapi/venv/bin
+EnvironmentFile=/home/ubuntu/fastapi/app/.env
+ExecStart=/home/ubuntu/fastapi/venv/bin/gunicorn -c /home/ubuntu/fastapi/gunicorn.conf.py app.main:app
 
 [Install]
 WantedBy=multi-user.target
