--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -48,7 +48,7 @@ jobs:
       - name: test with pytest
         run: |
           pip install pytest
-          pytest
+          pytest -v -x
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
