Environment changed to testing in CI/CD

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     environment:
-      name: production
+      name: testing
     env:
       DATABASE_HOST: ${{secrets.DATABASE_HOST}}
       DATABASE_PORT: ${{secrets.DATABASE_PORT}}
