--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -92,4 +92,5 @@ jobs:
           script: |
             cd app/src
             git pull
-            touch login_successful
+            docker compose down
+            docker compose up -d
