--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -90,5 +90,5 @@ jobs:
           username: ${{secrets.PROD_USERNAME}}
           key: ${{secrets.PROD_SSH_PRIVATE_KEY}}
           script: |
-            docker compose down
-            docker compose up -d
+            sudo docker compose down
+            sudo docker compose up -d
