--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -101,3 +101,5 @@ jobs:
           script: |
             sudo docker compose down
             sudo docker compose up -d
+            CONTAINER_ID=$(docker ps --filter "label=dev.shovon.api=api" -q)
+            docker exec -it $CONTAINER_ID alembic upgrade head
