Missing Super user permission added for docker command

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -102,4 +102,4 @@ jobs:
             sudo docker compose down
             sudo docker compose up -d
             CONTAINER_ID=$(docker ps --filter "label=dev.shovon.api=api" -q)
-            docker exec -it $CONTAINER_ID alembic upgrade head
+            sudo docker exec -it $CONTAINER_ID alembic upgrade head
