--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -101,5 +101,5 @@ jobs:
           script: |
             sudo docker compose down
             sudo docker compose up -d
-            CONTAINER_ID=$(sudo docker ps --filter "label=dev.shovon.api=api" -q)
+            CONTAINER_ID=$(sudo docker ps --filter "label=dev.shovon.fastapi.api=api" -q)
             sudo docker exec $CONTAINER_ID alembic upgrade head
